--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,29 @@
-  .axis path,
-  .axis line{
-    fill: none;
-    stroke: black;
-  }
+.axis path,
+.axis line{
+  fill: none;
+  stroke: black;
+}
 
-  .line{
-    fill: none;
-    stroke: blue;
-    stroke-width: 2px;
-  }
+.line{
+  fill: none;
+  stroke: blue;
+  stroke-width: 2px;
+}
 
-  .tick text{
-    font-size: 12px;
-  }
+.tick text{
+  font-size: 12px;
+}
 
-  .tick line{
-    opacity: 0.2;
-  }
+.tick line{
+  opacity: 0.2;
+}
+
+#map path{
+  stroke: gray;
+  stroke-width: 1px;    
+}
+
+#tooltip{
+  display: none;
+  position: absolute;
+}
