--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@
   font-size: 12px;
 }
 
+#tooltip text{
+  font-size: 10px;
+}
+
 .tick line{
   opacity: 0.2;
 }
@@ -26,4 +30,7 @@
 #tooltip{
   display: none;
   position: absolute;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 5px;
+  border: 2px solid gray;
 }
