--- a/css/main.css
+++ b/css/main.css
@@ -39,3 +39,10 @@ path{
 path.highlighted {
   stroke: black!important;
 }
+
+.legend-block {
+  stroke: black;
+}
+.legend-background {
+  fill: rgba(255, 255, 255, 0.9);
+}
